--- a/cardmodel/src/main/res/values/strings.xml
+++ b/cardmodel/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
 
     <string name="spell_grade_int_zeon_format">Int : %1$d / %2$d Zéon</string>
     <string name="spell_grade_retention_format">Maintien : %1$d</string>
+    <string name="Loading_Message">Chargement</string>
 
 </resources>
