--- a/cardmodel/src/main/res/values/strings.xml
+++ b/cardmodel/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
 
     <string name="spell_grade_int_zeon_format">Int : %1$d / %2$d Zéon</string>
     <string name="spell_grade_retention_format">Maintien : %1$d</string>
+    <string name="spell_grade_retention_daily_format">Maintien : %1$d Quot.</string>
+
     <string name="Loading_Message">Chargement</string>
 
     <string name="Common_Close">Fermer</string>
