--- a/cardmodel/src/main/res/values/strings.xml
+++ b/cardmodel/src/main/res/values/strings.xml
@@ -32,9 +32,9 @@
 
     <!--Spell Formats-->
     <string name="spell_book_and_level_format">%1$s Niv. %2$d</string>
-    <string name="spell_action_type_format"><b>Action :</b></string>
-    <string name="spell_type_format"><b>Type :</b></string>
-    <string name="spell_effect_format"><b>Effet :</b></string>
+    <string name="spell_action_type_format"><b>Action : </b></string>
+    <string name="spell_type_format"><b>Type : </b></string>
+    <string name="spell_effect_format"><b>Effet : </b></string>
 
     <!--Grade-->
     <string name="initial_grade_title">Initial</string>
@@ -49,5 +49,6 @@
     <string name="Loading_Message">Chargement</string>
 
     <string name="Common_Close">Fermer</string>
+    <string name="Common_See_More">Voir tout</string>
 
 </resources>
