--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="Common_See_More">Voir tout</string>
     <string name="Common_Loading_Message">Chargement</string>
 
+    <!--Spellbooks-->
+    <string name="Spellbooks_Title">Livres de sorts</string>
+
     <!--Spell Formats-->
     <string name="spell_book_and_level_format">%1$s Niv. %2$d</string>
     <string name="spell_action_type_format"><b>Action : </b></string>
@@ -24,5 +27,14 @@
 
     <!--Witchspells    -->
     <string name="Witch_Creation_Title">Création d\'un sorcier</string>
+    <string name="Witchspells_Path_Title_And_Level_Format">%1$s Niv. %2$d</string>
+    <string name="Witchspells_Secondary_Path_Title_And_Level_Format">Voie secondaire : %1$s Niv. %2$s</string>
+
+    <string name="Witchspells_Free_Access_Title_Singular">+ %1$d Sort d\'accès libre</string>
+    <string name="Witchspells_Free_Access_Title_Plural">+ %1$d Sorts d\'accès libre</string>
+    <plurals name="Witchspells_Free_Access_Title">
+        <item quantity="one">Witchspells_Free_Access_Title_Singular</item>
+        <item quantity="other">Witchspells_Free_Access_Title_Plural</item>
+    </plurals>
 
 </resources>
