--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
 
     <!--Witchspells    -->
     <string name="Witch_Creation_Title">Création d\'un sorcier</string>
-    <string name="Witchspells_Path_Title_And_Level_Format">%1$s Niv. %2$d</string>
+    <string name="Witchspells_Path_Title_And_Level_Format">%1$s Niv. %2$s</string>
     <string name="Witchspells_Secondary_Path_Title_And_Level_Format">Voie secondaire : %1$s Niv. %2$s</string>
 
     <string name="Witchspells_Free_Access_Title_Singular">+ %1$d Sort d\'accès libre</string>
@@ -40,4 +40,9 @@
 
     <string name="Witchspells_Name_Label">Nom du sorcier</string>
 
+    <string name="Witchspells_Add_Main_Path">Ajouter une voie</string>
+    <string name="Witchspells_Add_Secondary_Path">Définir une voie secondaire</string>
+    <string name="Witchspells_Add_Free_Access">Définir les sorts d\'accès libre</string>
+
+    <string name="Witchspells_Validate_Creation">Valider</string>
 </resources>
