--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
         <item quantity="other">Witchspells_Free_Access_Title_Plural</item>
     </plurals>
 
-    <string name="Witchspells_Name_Label">Nom du sorcier</string>
+    <string name="Witchspells_Name_Label">Titulaire du grimoire</string>
 
     <string name="Witchspells_Add_Main_Path">Ajouter une voie</string>
     <string name="Witchspells_Add_Secondary_Path">Définir une voie secondaire</string>
