--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="Witchspells_Free_Access_Title_Singular">+ %1$d Sort d\'accès libre</string>
     <string name="Witchspells_Free_Access_Title_Plural">+ %1$d Sorts d\'accès libre</string>
 
+    <string name="Witchspells_Name_Format">Sorts de %1$s</string>
+
     <plurals name="Witchspells_Free_Access_Title">
         <item quantity="one">Witchspells_Free_Access_Title_Singular</item>
         <item quantity="other">Witchspells_Free_Access_Title_Plural</item>
