Correction de bugs, début d'implémentation des + de la home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="Witchspells_Add_Label">Ajouter une liste de sorts</string>
     <string name="Error_No_Witchspells_Name">Un nom est nécessaire pour pouvoir enregistrer le grimoire</string>
     <string name="Witchspells_Save_Waiting_Message">Enregistrement du grimoire...</string>
+    <string name="Witchspells_Free_Access_Value">Sorts de libre accès</string>
 
 
 </resources>
