--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,10 @@
     <string name="Common_Delete">Supprimer</string>
     <string name="Witchspells_Title">Grimoires</string>
     <string name="Witchspells_Add_Description_Label">Un grimoire est le recueil de sorts d\'un sorcier, créé à partir de ses niveaux de voies.\n Cliquez sur le livre ci-dessus pour créer votre grimoire.</string>
+    <string name="Witchspells_Delete_Confirmation_Title">Supprimer le grimoire ?</string>
+    <string name="Witchspells_Delete_Confirmation_Message">Etes-vous sûr de vouloir supprimer ce grimoire ?</string>
+    <string name="Common_Search">Rechercher</string>
+    <string name="Common_Filter">Filtrer</string>
 
 
 </resources>
