--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="Common_Loading_Message">Chargement</string>
     <string name="Common_Validate">Valider</string>
     <string name="Common_Modify">Modifier</string>
+    <string name="Common_Delete">Supprimer</string>
+    <string name="Common_Search">Rechercher</string>
+    <string name="Common_Filter">Filtrer</string>
+    <string name="Common_All">Toutes</string>
 
     <!--Spellbooks-->
     <string name="Spellbooks_Title">Livres de sorts</string>
@@ -61,19 +65,19 @@
     <string name="Error_No_Witchspells_Name">Un nom est nécessaire pour pouvoir enregistrer le grimoire</string>
     <string name="Witchspells_Save_Waiting_Message">Enregistrement du grimoire…</string>
 
+
     <string name="Main_Path_Title">Voies principales</string>
     <string name="Secondary_Path_Title">Voies secondaires</string>
     <string name="Free_Access_Title">Sorts d\'accès libre</string>
+
     <string name="Witchspells_See_Spells">Voir les sorts</string>
-    <string name="Common_Delete">Supprimer</string>
     <string name="Witchspells_Title">Grimoires</string>
     <string name="Witchspells_Add_Description_Label">Un grimoire est le recueil de sorts d\'un sorcier, créé à partir de ses niveaux de voies.\n Cliquez sur le livre ci-dessus pour créer votre grimoire.</string>
     <string name="Witchspells_Delete_Confirmation_Title">Supprimer le grimoire ?</string>
     <string name="Witchspells_Delete_Confirmation_Message">Etes-vous sûr de vouloir supprimer ce grimoire ?</string>
-    <string name="Common_Search">Rechercher</string>
-    <string name="Common_Filter">Filtrer</string>
+
     <string name="Spell_Filter_Search_Description">Rechercher dans la description</string>
-    <string name="Spell_Filter_Type">Type de sorts</string>
+    <string name="Spell_Filter_Type">Types de sorts</string>
     <string name="Spell_Filter_Type_Attack">Attaque</string>
     <string name="Spell_Filter_Type_Defense">Défense</string>
     <string name="Spell_Filter_Type_Effect">Effet</string>
@@ -89,7 +93,6 @@
     <string name="Spell_Filter_Action_Type">Type d\'action</string>
     <string name="Spell_Filter_Action_Type_Active">Active</string>
     <string name="Spell_Filter_Action_Type_Passive">Passive</string>
-    <string name="Common_All">Tous</string>
 
 
 </resources>
