--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,10 @@
     <string name="Witchspells_Delete_Confirmation_Title">Supprimer le grimoire ?</string>
     <string name="Witchspells_Delete_Confirmation_Message">Etes-vous sûr de vouloir supprimer ce grimoire ?</string>
 
+    <string name="Witchspells_Free_Access_Title">Choisir ses sorts</string>
+    <string name="Witchspells_Free_Access_Choose">Choisir ses sorts d\'accès libre</string>
+    <string name="Witchspells_Free_Access_Modify">Modifier ses sorts d\'accès libre (%1$d sorts choisis sur %2$d)</string>
+
     <string name="Spell_Filter_Search_Description">Rechercher dans la description</string>
     <string name="Spell_Filter_Type">Types de sorts</string>
     <string name="Spell_Filter_Type_Attack">Attaque</string>
@@ -97,5 +101,7 @@
     <string name="Spell_Filter_Action_Type_Passive">Passive</string>
 
     <string name="Spell_Empty_List_Message">Aucun sort ne correspond à la recherche.</string>
+
+
 
 </resources>
