--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
 
     <string name="Witchspells_Free_Access_Title">Choisir ses sorts</string>
     <string name="Witchspells_Free_Access_Choose">Choisir ses sorts d\'accès libre</string>
-    <string name="Witchspells_Free_Access_Modify">Modifier ses sorts d\'accès libre (%1$d sorts choisis sur %2$d)</string>
+    <string name="Witchspells_Free_Access_Modify">Modifier ses sorts d\'accès libre\n(%1$d sorts choisis sur %2$d)</string>
 
     <string name="Spell_Filter_Search_Description">Rechercher dans la description</string>
     <string name="Spell_Filter_Type">Types de sorts</string>
