--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
 
     <string name="Witchspells_Free_Access_Title">Choisir ses sorts</string>
     <string name="Witchspells_Free_Access_Choose">Choisir ses sorts d\'accès libre</string>
-    <string name="Witchspells_Free_Access_Modify">Modifier ses sorts d\'accès libre\n(%1$d sorts choisis sur %2$d)</string>
+    <string name="Witchspells_Free_Access_Modify">Sorts d\'accès libre\n(%1$d sorts choisis sur %2$d)</string>
 
     <string name="Spell_Filter_Search_Description">Rechercher dans la description</string>
     <string name="Spell_Filter_Type">Types de sorts</string>
@@ -106,6 +106,10 @@
     <string name="Spell_Empty_List_Message">Aucun sort ne correspond à la recherche.</string>
     <string name="Witchspells_Free_Access_Slot">Sorts d\'accès libre 1-%1$d</string>
     <string name="Common_Level">Niveau</string>
+    <string name="Witchspells_Delete_Free_Access_Title">Supprimer les sorts d\'accès libre</string>
+    <string name="Witchspells_Delete_Free_Access_Message">Etes-vous sûr de vouloir réinitialiser tous vos sorts d\'accès libre pour cette voie ?</string>
+    <string name="Witchspells_Delete_Secondary_Path_Title">Supprimer la voie secondaire</string>
+    <string name="Witchspells_Delete_Secondary_Path_Message">Supprimer la voie secondaire associée à cette voie ?</string>
 
 
 </resources>
