--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="Error_No_Witchspells_Name">Un nom est nécessaire pour pouvoir enregistrer le grimoire</string>
     <string name="Witchspells_Save_Waiting_Message">Enregistrement du grimoire…</string>
 
+    <string name="Witchspells_Title_Create">Nouveau grimoire</string>
 
     <string name="Main_Path_Title">Voies principales</string>
     <string name="Secondary_Path_Title">Voies secondaires</string>
@@ -110,6 +111,7 @@
     <string name="Witchspells_Delete_Free_Access_Message">Etes-vous sûr de vouloir réinitialiser tous vos sorts d\'accès libre pour cette voie ?</string>
     <string name="Witchspells_Delete_Secondary_Path_Title">Supprimer la voie secondaire</string>
     <string name="Witchspells_Delete_Secondary_Path_Message">Supprimer la voie secondaire associée à cette voie ?</string>
-
+    <string name="Common_Leave">Quitter</string>
+    <string name="Witchspells_Cancel_Creation">En quittant cette page vous annulerez la création du grimoire. Etes-vous sûr de vouloir quitter ?</string>
 
 </resources>
