--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,15 +38,26 @@
     <string name="Witchspells_Path_Title_And_Level_Format">%1$s Niv. %2$s</string>
     <string name="Witchspells_Secondary_Path_Title_And_Level_Format">Voie secondaire : %1$s Niv. %2$s</string>
 
+    <string name="Witchspells_Name_Format">Sorts de %1$s</string>
+
+
     <string name="Witchspells_Free_Access_Title_Singular">+ %1$d Sort d\'accès libre</string>
     <string name="Witchspells_Free_Access_Title_Plural">+ %1$d Sorts d\'accès libre</string>
-
-    <string name="Witchspells_Name_Format">Sorts de %1$s</string>
 
     <plurals name="Witchspells_Free_Access_Title">
         <item quantity="one">Witchspells_Free_Access_Title_Singular</item>
         <item quantity="other">Witchspells_Free_Access_Title_Plural</item>
     </plurals>
+
+    <string name="Witchspells_Free_Access_Format_Singular">%1$d Sort d\'accès libre</string>
+    <string name="Witchspells_Free_Access_Format_Plural">%1$d Sorts d\'accès libre</string>
+
+    <plurals name="Witchspells_Free_Access_Format">
+        <item quantity="one">@string/Witchspells_Free_Access_Format_Singular</item>
+        <item quantity="other">@string/Witchspells_Free_Access_Format_Plural</item>
+    </plurals>
+
+    <string name="Witchspells_No_Secondary_Spells">Aucun sort secondaire</string>
 
     <string name="Witchspells_Name_Label">Titulaire du grimoire</string>
 
