--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,8 @@
     <string name="advanced_grade_title">Avancé</string>
     <string name="arcane_grade_title">Arcane</string>
 
-    <string name="spell_grade_int_zeon_format">Int : %1$d / %2$d Zéon</string>
+    <string name="spell_grade_int_format">Int : %1$d</string>
+    <string name="spell_grade_zeon_format">%1$d Zéon</string>
     <string name="spell_grade_retention_format">Maintien : %1$d</string>
     <string name="spell_grade_retention_daily_format">Maintien : %1$d Quot.</string>
 
