--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
 
     <!--Common wordings-->
     <string name="Common_Close">Fermer</string>
-    <string name="Common_See_More">Voir tout</string>
+    <string name="Common_See_All">Voir tout</string>
     <string name="Common_Loading_Message">Chargement</string>
     <string name="Common_Validate">Valider</string>
     <string name="Common_Modify">Modifier</string>
@@ -76,8 +76,8 @@
     </plurals>
 
     <string name="Witchspells_Add_Label">Ajouter un grimoire</string>
-    <string name="Error_No_Witchspells_Name">Un nom est nécessaire pour pouvoir enregistrer le grimoire</string>
-    <string name="Witchspells_Save_Waiting_Message">Enregistrement du grimoire…</string>
+    <string name="Error_No_Witchspells_Name">Un nom est nécessaire pour pouvoir créer le grimoire</string>
+    <string name="Witchspells_Save_Waiting_Message">Création du grimoire…</string>
 
     <string name="Witchspells_Title_Create">Nouveau grimoire</string>
 
